--- a/hours.html
+++ b/hours.html
@@ -16,10 +16,10 @@
         <hr>
         <nav>
             <ul>
-                <li><a href="/HTML_PROJECT/index.html">Home</a></li>
-                <li><a href="/HTML_PROJECT/index.html#About LTS">About <abbr title="The Little taco Shop">LTS</abbr></a></li>
-                <li><a href="/HTML_PROJECT/index.html#Menu">Our Menu</a></li>
-                <li><a href="/HTML_PROJECT/contact.html">Contact Us</a></li>
+                <li><a href="index.html#Home">Home</a></li>
+                <li><a href="index.html#About LTS">About <abbr title="The Little taco Shop">LTS</abbr></a></li>
+                <li><a href="index.html#Menu">Our Menu</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
         <hr>
